@@ -15,7 +15,7 @@
 """Load data into a repository."""
 
 import subunit
-from testtools import MultiTestResult
+from testtools import ConcurrentTestSuite, MultiTestResult
 
 from testrepository.commands import Command
 from testrepository.results import TestResultFilter
@@ -33,23 +33,28 @@ class load(Command):
     def run(self):
         path = self.ui.here
         repo = self.repository_factory.open(path)
-        failed = False
         run_id = None
-        for stream in self.ui.iter_streams('subunit'):
-            inserter = repo.get_inserter()
-            output_result = self.ui.make_result(lambda: run_id)
-            # XXX: We want to *count* skips, but not show them.
-            filtered = TestResultFilter(output_result, filter_skip=False)
-            case = subunit.ProtocolTestCase(stream)
-            filtered.startTestRun()
-            inserter.startTestRun()
-            try:
-                case.run(MultiTestResult(inserter, filtered))
-            finally:
-                run_id = inserter.stopTestRun()
-                filtered.stopTestRun()
-            failed = failed or not filtered.wasSuccessful()
-        if failed:
+        # Not a full implementation of TestCase, but we only need to iterate
+        # back to it. Needs to be a callable - its a head fake for
+        # testsuite.add.
+        cases = lambda:self.ui.iter_streams('subunit')
+        def make_tests(suite):
+            streams = list(suite)[0]
+            for stream in streams():
+                yield subunit.ProtocolTestCase(stream)
+        case = ConcurrentTestSuite(cases, make_tests)
+        inserter = repo.get_inserter()
+        output_result = self.ui.make_result(lambda: run_id)
+        # XXX: We want to *count* skips, but not show them.
+        filtered = TestResultFilter(output_result, filter_skip=False)
+        filtered.startTestRun()
+        inserter.startTestRun()
+        try:
+            case.run(MultiTestResult(inserter, filtered))
+        finally:
+            run_id = inserter.stopTestRun()
+            filtered.stopTestRun()
+        if not filtered.wasSuccessful():
             return 1
         else:
             return 0
